feat(): made the serializer serialize the path to have /data and not the full path